--- a/classwork1/img5/main.css
+++ b/classwork1/img5/main.css
@@ -1,10 +1,7 @@
 .main {
-    background: #87e087;
-    width: 1200px;
+    width: 620px;
     height: 920px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin: auto;
 }
 .a {
     width: 620px;
