--- a/home/home6/css/style.css
+++ b/home/home6/css/style.css
@@ -227,4 +227,71 @@ table {
 .header__description_card span {
     color: #BC9060;
 }
-
+.history {
+    display: flex;
+    box-sizing: border-box;
+}
+.history__text {
+    display: flex;
+    flex-direction: column;
+    width: 444px;
+    margin-top: 375px;
+    align-items: center;
+}
+.history__text h2 {
+    font-weight: normal;
+    font-size: 54px;
+    line-height: 62px;
+    color: #000000;
+    padding-bottom: 20px;
+}
+.history__text p {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 22px;
+    text-align: center;
+    color: #656363;
+    padding-bottom: 39px;
+}
+.history__food {
+    display: flex;
+    column-gap: 30px;
+}
+.history__food span {
+    font-weight: normal;
+    font-size: 40px;
+    line-height: 54px;
+    text-align: center;
+    color: #BC9060;
+}
+.history__food p {
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 27px;
+    text-align: center;
+    color: #000000;
+}
+.photo_1 {
+    position: absolute;
+    top: 1205px;
+    left: 1020px;
+}
+.photo_2 {
+    position: absolute;
+    top: 1172px;
+    left: 925px;
+}
+.photo_3 {
+    position: absolute;
+    left: 1019px;
+    top: 1369px;
+    filter: drop-shadow(3px 80px 0px rgba(0, 0, 0, 0.25));
+    margin-bottom: 122px;
+}
+.photo_4 {
+    position: absolute;
+    left: 735px;
+    top: 1200px;
+    box-shadow: 20px 0px 30px 3px
+    rgba(0, 0, 0, 0);
+}
