--- a/control html/css/style.css
+++ b/control html/css/style.css
@@ -135,10 +135,11 @@
     background-color: #FFFFFF;
 }
 .search__mobile {
+    width: 100%;
     height: 34px;
 }
 .search__mobile input {
-    width: 267px;
+    width: 100%;
     height: 34px;
     background: #F4F5FA;
     border-radius: 4px 0 0 4px;
